# saraatek-system-V2

./: .gitignore  DESIGN.md  README.md  SARAAEK_MARSTER_PLAN.md  SARAAEK_UI_REDESIGN.md  SARAAEK_UI_REDESIGN_V2.md  SARAAEK_UI_REDESIGN_V3.md  SARAAEK_UI_REDESIGN_V4.md  example,templete of Invoice.html  example,templete of Quotation.html  index.html  package-lock.json  package.json  saraatek-system-plan.md  supabase_schema.sql
dark-ui color system/: dark-ui-colors.css  dark-ui-design-system.md
installer/: BuildAPK.bat  README.md  SetupMobile.bat  StartSaraaTEK.bat  WebApp.bat
mobile/: capacitor.config.ts  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  lib.rs.tmp  main.rs  pdf.rs
src-tauri/src/commands/: accounting.rs  ai_messaging.rs  ai_service.rs  audit.rs  auth.rs  backup.rs  campaigns.rs  cloud_sync.rs  communications.rs  companies.rs  contacts.rs  customers.rs  database_monitor.rs  documents.rs  email.rs  gemini.rs  mod.rs  notifications.rs  openrouter.rs  payments.rs  pdf_settings.rs  photos.rs  quotations.rs  repairs.rs  reports.rs  settings.rs  sms.rs  supabase_sync.rs  technicians.rs  two_way.rs  warranties.rs
src-tauri/templates/: invoice.html  quotation.html
src/components/: AIAssistant.tsx  Button.tsx  Card.tsx  DataTable.tsx  EmptyState.tsx  ErrorBanner.tsx  Input.tsx  Layout.tsx  Modal.tsx  PaymentModal.tsx  Sidebar.tsx  SignaturePad.tsx  Skeleton.tsx  StatusBadge.tsx  StatusBar.tsx  Titlebar.tsx  Toast.tsx  index.ts
src/lib/: adaptive.ts  api.ts  intent.ts  mapError.ts  phone.ts  secureStore.ts  tracking.ts
src/screens/: AIMessageComposer.tsx  Accounting.tsx  Analytics.tsx  BalanceSheet.tsx  Communications.tsx  CompanyList.tsx  CompanyProfile.tsx  CustomerAnalytics.tsx  Dashboard.tsx  DatabaseMonitor.tsx  Documents.tsx  Ledger.tsx  (+18 more)
(+12 files in other folders)
