[package]
name = "saraatek"
version = "0.1.0"
edition = "2021"

[lib]
name = "saraatek_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-dialog = "2.7.1"
printpdf = { version = "0.9.1", default-features = false }
ureq = { version = "3", features = ["json"] }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "builder", "rustls-tls"] }
