[package]
name = "saraatek"
version = "0.1.0"
edition = "2021"

[lib]
name = "saraatek_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.39", features = ["bundled", "backup"] }
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-dialog = "2.7.1"
printpdf = { version = "0.9.1", default-features = false }
ureq = { version = "3", features = ["json"] }
tera = "1"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "builder", "rustls-tls"] }
dirs = "6.0.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
bcrypt = "0.15"
r2d2 = "0.8"
r2d2_sqlite = "0.34"
tauri-plugin-store = "2"
